--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "datatables.net-bs5": "^1.10.25",
+    "datatables.net-responsive-bs5": "^2.2.9",
+    "hover.css": "^2.3.2",
+    "mdb-vue-ui-kit": "^1.1.0",
     "sweetalert2": "^11.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.10"
